--- a/.github/workflows/java-build.yml
+++ b/.github/workflows/java-build.yml
@@ -7,13 +7,11 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  compile:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-
     runs-on: ${{ matrix.os }}
-
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 17
@@ -27,16 +25,81 @@ jobs:
           echo "Compiling the application..."
           mvn clean compile
         shell: bash
+
+  check_dependencies:
+    needs: compile
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
       - name: Check Dependencies
         run: |
           echo "Checking dependencies..."
           mvn dependency:resolve
         shell: bash
+
+  unit_tests:
+    needs: check_dependencies
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Run Unit Tests
+        run: |
+          echo "Running unit tests..."
+          mvn test
+        shell: bash
+
+  package:
+    needs: unit_tests
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
       - name: Package Application
         run: |
           echo "Packaging the application..."
           mvn package -DskipTests
         shell: bash
+
+  acceptance_tests:
+    needs: package
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
       - name: Start Server
         if: runner.os == 'Linux'
         run: |
@@ -52,10 +115,10 @@ jobs:
           Start-Process -NoNewWindow -FilePath "java" -ArgumentList "-jar target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar"
           Start-Sleep -s 5
         shell: powershell
-      - name: Run Tests
+      - name: Run Acceptance Tests
         run: |
-          echo "Running tests..."
-          mvn test
+          echo "Running acceptance tests..."
+          mvn verify
         shell: bash
       - name: Stop Server
         if: runner.os == 'Linux'
@@ -71,5 +134,10 @@ jobs:
           echo "Stopping the server..."
           Stop-Process -Name java
         shell: powershell
+
+  update_dependency_graph:
+    needs: acceptance_tests
+    runs-on: ubuntu-latest
+    steps:
       - name: Update dependency graph
         uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
