--- a/pom.xml
+++ b/pom.xml
@@ -65,9 +65,32 @@
                 <configuration>
                     <includes>
                         <include>**/*Test.java</include>
+                    </includes>
+                    
+                    <excludes>
+                        <exclude>**/*Tests.java</exclude>
+                    </excludes>
+                    <useModulePath>false</useModulePath> <!-- For Java 9+ -->
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                <!-- Include only acceptance/integration tests -->
+                    <includes>
                         <include>**/*Tests.java</include>
                     </includes>
-                    <useModulePath>false</useModulePath> <!-- For Java 9+ -->
                 </configuration>
             </plugin>
 
