--- a/.github/workflows/java-build.yml
+++ b/.github/workflows/java-build.yml
@@ -87,53 +87,60 @@ jobs:
         shell: bash
 
   acceptance_tests:
-    needs: package
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-      - name: Start Server
-        if: runner.os == 'Linux'
-        run: |
-          echo "Starting the server..."
-          nohup java -jar target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar &
-          SERVER_PID=$!
-          sleep 5
-        shell: bash
-      - name: Start Server (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          echo "Starting the server..."
-          Start-Process -NoNewWindow -FilePath "java" -ArgumentList "-jar target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar"
-          Start-Sleep -s 5
-        shell: powershell
-      - name: Run Acceptance Tests
-        run: |
-          echo "Running acceptance tests..."
-          mvn verify
-        shell: bash
-      - name: Stop Server
-        if: runner.os == 'Linux'
-        run: |
-          echo "Stopping the server..."
-          if [ -n "$SERVER_PID" ]; then
-            kill $SERVER_PID
-          fi
-        shell: bash
-      - name: Stop Server (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          echo "Stopping the server..."
-          Stop-Process -Name java
-        shell: powershell
+  needs: package
+  strategy:
+    matrix:
+      os: [ubuntu-latest, windows-latest]
+  runs-on: ${{ matrix.os }}
+  steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Check JAR file exists
+      run: |
+        if [ ! -f target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar ]; then
+          echo "JAR file not found!"
+          exit 1
+        fi
+    - name: Start Server
+      if: runner.os == 'Linux'
+      run: |
+        echo "Starting the server..."
+        nohup java -jar target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar &
+        SERVER_PID=$!
+        sleep 5
+      shell: bash
+    - name: Start Server (Windows)
+      if: runner.os == 'Windows'
+      run: |
+        echo "Starting the server..."
+        Start-Process -NoNewWindow -FilePath "java" -ArgumentList "-jar target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar"
+        Start-Sleep -s 5
+      shell: powershell
+    - name: Run Acceptance Tests
+      run: |
+        echo "Running acceptance tests..."
+        mvn verify
+      shell: bash
+    - name: Stop Server
+      if: runner.os == 'Linux'
+      run: |
+        echo "Stopping the server..."
+        if [ -n "$SERVER_PID" ]; then
+          kill $SERVER_PID
+        fi
+      shell: bash
+    - name: Stop Server (Windows)
+      if: runner.os == 'Windows'
+      run: |
+        echo "Stopping the server..."
+        Stop-Process -Name java
+      shell: powershell
+
 
   update_dependency_graph:
     needs: acceptance_tests
