--- a/.github/workflows/java-build.yml
+++ b/.github/workflows/java-build.yml
@@ -67,86 +67,91 @@ jobs:
         shell: bash
 
   package:
-    needs: unit_tests
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-      - name: Package Application
-        run: |
-          echo "Packaging the application..."
-          mvn package -DskipTests
-        shell: bash
-      - name: Upload JAR file
-        uses: actions/upload-artifact@v3
-        with:
-          name: jar-file
-          path: target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar
+  needs: unit_tests
+  strategy:
+    matrix:
+      os: [ubuntu-latest, windows-latest]
+  runs-on: ${{ matrix.os }}
+  steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Package Application
+      run: |
+        echo "Packaging the application..."
+        mvn package -DskipTests
+      shell: bash
+    - name: List target directory
+      run: |
+        echo "Listing target directory..."
+        ls target
+    - name: Upload JAR file
+      uses: actions/upload-artifact@v3
+      with:
+        name: jar-file
+        path: target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar
 
-  acceptance_tests:
-    needs: package
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-      - name: Download JAR file
-        uses: actions/download-artifact@v3
-        with:
-          name: jar-file
-      - name: Start Server
-        if: runner.os == 'Linux'
-        run: |
-          echo "Starting the server..."
-          nohup java -jar target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar &
-          SERVER_PID=$!
-          sleep 5
-        shell: bash
-      - name: Start Server (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          echo "Starting the server..."
-          Start-Process -NoNewWindow -FilePath "java" -ArgumentList "-jar target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar"
-          Start-Sleep -s 5
-        shell: powershell
-      - name: Run Acceptance Tests
-        run: |
-          echo "Running acceptance tests..."
-          mvn verify
-        shell: bash
-      - name: Stop Server
-        if: runner.os == 'Linux'
-        run: |
-          echo "Stopping the server..."
-          if [ -n "$SERVER_PID" ]; then
-            kill $SERVER_PID
-          fi
-        shell: bash
-      - name: Stop Server (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          echo "Stopping the server..."
-          Stop-Process -Name java
-        shell: powershell
 
-  update_dependency_graph:
-    needs: acceptance_tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+  # acceptance_tests:
+  #   needs: package
+  #   strategy:
+  #     matrix:
+  #       os: [ubuntu-latest, windows-latest]
+  #   runs-on: ${{ matrix.os }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Set up JDK 17
+  #       uses: actions/setup-java@v4
+  #       with:
+  #         java-version: '17'
+  #         distribution: 'temurin'
+  #         cache: maven
+  #     - name: Download JAR file
+  #       uses: actions/download-artifact@v3
+  #       with:
+  #         name: jar-file
+  #     - name: Start Server
+  #       if: runner.os == 'Linux'
+  #       run: |
+  #         echo "Starting the server..."
+  #         nohup java -jar target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar &
+  #         SERVER_PID=$!
+  #         sleep 5
+  #       shell: bash
+  #     - name: Start Server (Windows)
+  #       if: runner.os == 'Windows'
+  #       run: |
+  #         echo "Starting the server..."
+  #         Start-Process -NoNewWindow -FilePath "java" -ArgumentList "-jar target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar"
+  #         Start-Sleep -s 5
+  #       shell: powershell
+  #     - name: Run Acceptance Tests
+  #       run: |
+  #         echo "Running acceptance tests..."
+  #         mvn verify
+  #       shell: bash
+  #     - name: Stop Server
+  #       if: runner.os == 'Linux'
+  #       run: |
+  #         echo "Stopping the server..."
+  #         if [ -n "$SERVER_PID" ]; then
+  #           kill $SERVER_PID
+  #         fi
+  #       shell: bash
+  #     - name: Stop Server (Windows)
+  #       if: runner.os == 'Windows'
+  #       run: |
+  #         echo "Stopping the server..."
+  #         Stop-Process -Name java
+  #       shell: powershell
+
+  # update_dependency_graph:
+  #   needs: acceptance_tests
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Update dependency graph
+  #       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
