--- a/.github/workflows/java-build.yml
+++ b/.github/workflows/java-build.yml
@@ -1,156 +1,3 @@
-# name: Java CI with Maven
-
-# on:
-#   push:
-#     branches: [ "main" ]
-#   pull_request:
-#     branches: [ "main" ]
-
-# jobs:
-#   compile:
-#     strategy:
-#       matrix:
-#         os: [ubuntu-latest, windows-latest]
-#     runs-on: ${{ matrix.os }}
-#     steps:
-#       - uses: actions/checkout@v4
-#       - name: Set up JDK 17
-#         uses: actions/setup-java@v4
-#         with:
-#           java-version: '17'
-#           distribution: 'temurin'
-#           cache: maven
-#       - name: Compile Application
-#         run: |
-#           echo "Compiling the application..."
-#           mvn clean compile
-#         shell: bash
-
-#   check_dependencies:
-#     needs: compile
-#     strategy:
-#       matrix:
-#         os: [ubuntu-latest, windows-latest]
-#     runs-on: ${{ matrix.os }}
-#     steps:
-#       - uses: actions/checkout@v4
-#       - name: Set up JDK 17
-#         uses: actions/setup-java@v4
-#         with:
-#           java-version: '17'
-#           distribution: 'temurin'
-#           cache: maven
-#       - name: Check Dependencies
-#         run: |
-#           echo "Checking dependencies..."
-#           mvn dependency:resolve
-#         shell: bash
-
-#   unit_tests:
-#     needs: check_dependencies
-#     strategy:
-#       matrix:
-#         os: [ubuntu-latest, windows-latest]
-#     runs-on: ${{ matrix.os }}
-#     steps:
-#       - uses: actions/checkout@v4
-#       - name: Set up JDK 17
-#         uses: actions/setup-java@v4
-#         with:
-#           java-version: '17'
-#           distribution: 'temurin'
-#           cache: maven
-#       - name: Run Unit Tests
-#         run: |
-#           echo "Running unit tests..."
-#           mvn test
-#         shell: bash
-
-#   package:
-#     needs: unit_tests
-#     strategy:
-#       matrix:
-#         os: [ubuntu-latest, windows-latest]
-#     runs-on: ${{ matrix.os }}
-#     steps:
-#       - uses: actions/checkout@v4
-#       - name: Set up JDK 17
-#         uses: actions/setup-java@v4
-#         with:
-#           java-version: '17'
-#           distribution: 'temurin'
-#           cache: maven
-#       - name: Package Application
-#         run: |
-#           echo "Packaging the application..."
-#           mvn package -DskipTests
-#         shell: bash
-#       - name: Upload JAR file
-#         uses: actions/upload-artifact@v3
-#         with:
-#           name: jar-file
-#           path: target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar
-
-#   acceptance_tests:
-#     needs: package
-#     strategy:
-#       matrix:
-#         os: [ubuntu-latest, windows-latest]
-#     runs-on: ${{ matrix.os }}
-#     steps:
-#       - uses: actions/checkout@v4
-#       - name: Set up JDK 17
-#         uses: actions/setup-java@v4
-#         with:
-#           java-version: '17'
-#           distribution: 'temurin'
-#           cache: maven
-#       - name: Download JAR file
-#         uses: actions/download-artifact@v3
-#         with:
-#           name: jar
-#       - name: Start Server
-#         if: runner.os == 'Linux'
-#         run: |
-#           echo "Starting the server..."
-#           nohup java -jar target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar &
-#           SERVER_PID=$!
-#           sleep 5
-#         shell: bash
-#       - name: Start Server (Windows)
-#         if: runner.os == 'Windows'
-#         run: |
-#           echo "Starting the server..."
-#           Start-Process -NoNewWindow -FilePath "java" -ArgumentList "-jar target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar"
-#           Start-Sleep -s 5
-#         shell: powershell
-#       - name: Run Acceptance Tests
-#         run: |
-#           echo "Running acceptance tests..."
-#           mvn verify
-#         shell: bash
-#       - name: Stop Server
-#         if: runner.os == 'Linux'
-#         run: |
-#           echo "Stopping the server..."
-#           if [ -n "$SERVER_PID" ]; then
-#             kill $SERVER_PID
-#           fi
-#         shell: bash
-#       - name: Stop Server (Windows)
-#         if: runner.os == 'Windows'
-#         run: |
-#           echo "Stopping the server..."
-#           Stop-Process -Name java
-#         shell: powershell
-
-#   update_dependency_graph:
-#     needs: acceptance_tests
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Update dependency graph
-#         uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
-
 name: Java CI with Maven
 
 on:
@@ -222,6 +69,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: jar-file
+          path: target/
       - name: List target directory
         run: |
           echo "Listing target directory..."
@@ -268,4 +116,5 @@ jobs:
     steps:
       - name: Update dependency graph
         uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+
 
